# tradingview-mcp

./: .env.example  .gitignore  .vercelignore  LICENSE  README.md  pyproject.toml  requirements.txt  server.py  vercel.json
cookie_updater_extension/: README.md  manifest.json  popup.html  popup.js
src/tradingview_mcp/: __init__.py  auth.py  config.py  http_main.py  main.py  tradingview_tools.py  utils.py  validators.py
tests/: temp_test.py  test_fetch_all_indicators.py  test_fetch_news_content.py  test_fetch_news_headlines.py  test_get_historical_batch.py  test_mcp_functions.py  test_tradingview_mcp.py
tests/http/: conftest.py  test_endpoint_all_indicators.py  test_endpoint_historical_data.py  test_endpoint_ideas.py  test_endpoint_minds.py  test_endpoint_news_content.py  test_endpoint_news_headlines.py  test_endpoint_option_chain.py  test_endpoint_update_cookies.py
tests/stdio/: test_fetch_historical_data.py  test_fetch_ideas.py  test_fetch_minds.py  test_fetch_option_chain.py
vercel/: Redeploy.py  index.py  models.py  requirements.txt
