[project]
name = "tradingview-mcp"
version = "0.1.0"
description = "FastMCP server for TradingView data scraping"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
    "pytz>=2024.1",
    "beautifulsoup4>=4.12.0",
    "setuptools>=80.9.0",
    "tradingview-screener>=0.6.0",
    "tradingview-scraper @ git+https://github.com/smitkunpara/tradingview-scraper.git",
    "pandas>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
tradingview-scraper = { git = "https://github.com/smitkunpara/tradingview-scraper.git" }
