[project]
name = "tradingview-mcp"
version = "0.1.0"
description = "FastMCP server for TradingView data scraping"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
    "PyJWT>=2.0.0",
    "pytz>=2024.1",
    "setuptools>=80.9.0,<81.0.0",
    "tradingview-scraper @ git+https://github.com/smitkunpara/tradingview-scraper.git",
    "requests>=2.32.5",
    "python-dotenv>=1.0.0",
    "python-toon @ git+https://github.com/xaviviro/python-toon.git",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-mock>=3.12.0"]

[tool.uv.sources]
tradingview-scraper = { git = "https://github.com/smitkunpara/tradingview-scraper.git" }
python-toon = { git = "https://github.com/xaviviro/python-toon.git" }
